# ccbot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  SETUP.md  llms.txt  pyproject.toml
.claude/rules/: architecture.md  message-handling.md  topic-architecture.md  worktree-agents.md
.github/workflows/: claude-code-review.yml  tests.yml
docs/: adding-a-runtime.md  docker-agents.md
scripts/: leakcheck.sh  restart.sh  test_reaction.py
src/ccbot/: agent_session.py  bot.py  codex_transcript_parser.py  config.py  docker_driver.py  grok_transcript_parser.py  hook.py  i18n.py  links.py  main.py  markdown_v2.py  monitor_state.py  plugins.py  preview.py  rate_limiter.py  rich_message.py  runtimes.py  screenshot.py  session.py  session_monitor.py  terminal_parser.py  tmux_manager.py  transcribe.py  transcript_parser.py  utils.py  worktrees.py
src/ccbot/handlers/: __init__.py  ask_question_router.py  askquestion_parser.py  browser_live.py  callback_data.py  callbacks.py  cleanup.py  coalesce.py  codex_status_parser.py  commands.py  context_parser.py  delivery.py  diff_view.py  directory_browser.py  history.py  interactive_ui.py  live_board.py  media.py  message_queue.py  message_sender.py  pane_cache.py  plan_parser.py  reaction_confirm.py  reaction_emit.py  response_builder.py  status_polling.py  task_pin.py  worktrees.py
src/ccbot/inject/: __init__.py  core.py  server.py
src/ccbot/voice/: __init__.py  hints.py  providers.py  safety.py  startup.py
tests/: conftest.py
tests/ccbot/: conftest.py  test_codex_transcript_parser.py  test_config.py  test_docker_driver.py  test_forward_command.py  test_grok_transcript_parser.py  test_hook.py  test_i18n.py  test_links.py  test_main.py  test_markdown_v2.py  test_media.py  test_rate_limiter.py  test_rich_message.py  test_runtimes.py  test_session.py  test_session_monitor.py  test_terminal_parser.py  test_tmux_manager.py  test_transcribe.py  test_transcript_parser.py  test_utils.py  test_voice_hints.py  test_voice_providers.py  test_voice_safety.py  test_worktrees.py  test_worktrees_git.py
tests/ccbot/handlers/: test_agent_panel.py  test_ask_question_router.py  test_askquestion_parser.py  test_callbacks.py  test_cleanup.py  test_coalesce.py  test_codex_status_parser.py  test_commands.py  test_delivery.py  test_diff_view.py  test_directory_browser.py  test_effective_user.py  test_interactive_ui.py  test_live_board.py  (+12 more)
(+4 files in other folders)
