[project]
name = "ccbot"
version = "0.1.0"
description = "Control Claude Code, Codex and other terminal AI agents from Telegram — forum topics bridged to tmux sessions"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["claude-code", "codex", "telegram", "telegram-bot", "tmux", "remote-control", "ai-agents", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
]

dependencies = [
    "python-telegram-bot[rate-limiter]>=21.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "libtmux>=0.37.0",
    "Pillow>=10.0.0",
    "aiofiles>=24.0.0",
    "telegramify-markdown>=0.5.0,<1.0.0",
    "mistletoe>=1.0",
    # aiohttp floor tracks security fixes: <3.14.1 ships 11 known CVEs
    # (request smuggling / parser). Only used by the local-uid inject socket,
    # but pinned so `pip-audit` stays clean. (audit LOW/dependency)
    "aiohttp>=3.14.1",
    # idna floor: <3.15 is CVE-flagged (PYSEC-2026-215); a transitive dep, so
    # pinned here to force the fixed version at lock time.
    "idna>=3.15",
]

[project.scripts]
ccbot = "ccbot.main:main"

[project.urls]
Homepage = "https://github.com/MrCryptoHat/ccbot"
Issues = "https://github.com/MrCryptoHat/ccbot/issues"

[dependency-groups]
# PEP 735 group — installed by a plain `uv sync` (and `uv sync --dev`), so the
# README's dev-checks (ruff/pyright/pytest) work right after a fresh clone.
dev = [
    "pyright>=1.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccbot"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests using real filesystem or external processes",
]

[tool.coverage.run]
source = ["ccbot"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "logger\\.",
]
